RESOLVED FIXED287467
CoreIPCSecTrust::createSecTrust() CFErrorRefs require initialization
https://bugs.webkit.org/show_bug.cgi?id=287467
Summary CoreIPCSecTrust::createSecTrust() CFErrorRefs require initialization
Simon Lewis
Reported 2025-02-10 21:40:25 PST
Early returns are happening in createSecTrust() as the CFErrorRefs need to be explicitly initialized to nullptr. rdar://144348926
Attachments
Simon Lewis
Comment 1 2025-02-10 21:45:03 PST
EWS
Comment 2 2025-02-11 13:28:33 PST
Committed 290234@main (d6838ec4f001): <https://commits.webkit.org/290234@main> Reviewed commits have been landed. Closing PR #40401 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.