CoreIPCSecTrust::createSecTrust() CFErrorRefs require initialization https://bugs.webkit.org/show_bug.cgi?id=287467 rdar://144348926

Reviewed by Sihui Liu.

* Source/WebKit/Shared/cf/CoreIPCSecTrust.mm:
(WebKit::CoreIPCSecTrust::CoreIPCSecTrust):
(WebKit::CoreIPCSecTrust::createSecTrust const):

Canonical link: https://commits.webkit.org/290234@main